--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,14 @@ body,
     height: 100%;
     margin: 0;
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 80px 200px 80px;
+    width: 700px;
+    height: 400px;
+    gap: 20px;
+}
+div {
+    background: #daa520;
+}
